# monasca-predictor

./: .gitignore  .zenodo.json  Makefile  README.md  requirements.txt  setup.cfg
monasca_predictor/: daemon.py  predictor.py
monasca_predictor/api/: monasca_api.py
monasca_predictor/common/: config.py  util.py
monasca_predictor/inference/: model.py
tests/: test_model.py
tests/inference/: test_model.py
