[metadata]
name = monasca-predictor
maintainer = Giacomo Lanciano
maintainer_email = giacomo.lanciano@sns.it
description-file = README.md
summary = Module that integrates with Monasca to provide predictive analytics.
home-page = https://github.com/giacomolanciano/monasca-predictor
keywords=
    openstack
    monitoring
    predictive analytics
    forecasting
license = Apache-2
include_package_data = True
python-requires = >=3.6
classifier =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: Apache Software License
    Topic :: System :: Monitoring
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    monasca_predictor
data_files =
    share/monasca-predictor =
        predictor.yaml.template

[entry_points]
console_scripts =
    monasca-predictor = monasca_predictor.predictor:main
